FIX SVg and image align

--- a/custom/yiannistaos-theme.less
+++ b/custom/yiannistaos-theme.less
@@ -180,3 +180,4 @@
 /* Custom by Yiannis from Web357 */
 a { cursor: pointer; }
 img, svg { vertical-align: middle; }
+.uk-accordion-title { cursor: pointer; }
